<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_add_event">Add Event</string>
    <string name="action_calendar_settings">Settings</string>
    
    <string name="title_section1">Month</string>
    <string name="title_section2">Week</string>
    <string name="title_section3">Day</string>
    
    <string name="calendar_columns">7</string>

    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="content_description">Description</string>
    <string name="category_name">Category Name</string>
    <string name="category_color">Category Color</string>
    
    <string name="string_holiday">Holiday Color</string>
    <string name="string_weekend">Weekend Color</string>
    
    <string name="highlight_weekend_flag">HWF</string>
    <string name="highlight_weekend_color">HWC</string>
    <string name="show_holiday_flag">SHF</string>
    <string name="show_holiday_color">SHC</string>
    
    <string name="event_file">cal_app_file.srl</string>
    <string name="category_file">cat_file.srl</string>

    <string name="event_name">Event Name</string>
    <string name="event_start">Start Time</string>
    <string name="event_end">End Time</string>
    <string name="event_description">Description</string>
    <string name="event_location">Location</string>
	<string name="event_category">Category</string>
	
	<string name="new_category">New</string>
</resources>
