<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <TextView
    	    android:inputType="none"
    	    android:textSize="18sp"
    	    android:textStyle="bold"
        	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
    	    android:text="@string/event_name" >
            
	    </TextView>

       <EditText
        	android:inputType="text"
        	android:textSize="16sp"
	        android:id="@+id/event_name"
    	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content" >
        
	    </EditText>
	    
	</LinearLayout>
    
    <TextView
	    android:inputType="none"
	    android:textStyle="bold"
        android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:textSize="18sp"
	    android:text="@string/event_start" >
        
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <DatePicker
        	android:id="@+id/event_start_date"
        	android:clickable="false"
        	android:calendarViewShown="false"
	        android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" >
        	
	    </DatePicker>
	    
    	<TimePicker
        	android:id="@+id/event_start_time"
        	android:clickable="false"
	        android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" >
            
	    </TimePicker>
	    
	</LinearLayout>
    
    <TextView
        android:inputType="none"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_end" >
            
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    
	    <DatePicker
        	android:id="@+id/event_end_date"
        	android:clickable="false"
        	android:calendarViewShown="false"
	        android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" >
        	
	    </DatePicker>
	    
    	<TimePicker
        	android:id="@+id/event_end_time"
        	android:clickable="false"
	        android:layout_width="wrap_content"
    	    android:layout_height="wrap_content" >
            
	    </TimePicker>
	    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    
        <TextView
            android:inputType="none"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_description" >
            
        </TextView>
        
        <EditText
            android:id="@+id/event_description"
            android:textSize="16sp"
            android:inputType="textMultiLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
        </EditText>

	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:inputType="none"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_location" >
            
        </TextView>
        
        <EditText
            android:id="@+id/event_location"
            android:textSize="16sp"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
        </EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:inputType="none"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_category" >
            
        </TextView>

        <Spinner
            android:id="@+id/event_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
        </Spinner>
        
        <Button 
            android:id="@+id/new_category"
            android:text="@string/new_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" >
            
        </Button>
        
    </LinearLayout>

</LinearLayout>
